--- a/app/src/main/res/layout/fragment_main_functionality.xml
+++ b/app/src/main/res/layout/fragment_main_functionality.xml
@@ -16,7 +16,7 @@
         tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/tw"
+        android:id="@+id/tvLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
@@ -24,6 +24,18 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:text="text"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/tvWeather"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvLocation"
         tools:text="text"
         tools:visibility="visible" />
 
